discussion/kv_engine/133455/133455_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36956: Refactor executorpool_test for multiple ExecutorPools

Modify the tests in executorpool_test.cc to facilitate testing more
than just the CB3 ExecutorPool:

- Change test fixtures to Typed Test fixtures (although only
  instantiated with the existing TextExecutorPool).

- Rename getBuckets to getTaskables to better reflect the current,
  more generic form.

Change-Id: Ia01595b9bf4c2b6c494f0b32615052b495afc8d9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-07-29 16:51:38.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-29 17:03:28.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25415/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/executorpool.h:172:17:
error: no type named "mutex" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25415/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3587/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:172:17: error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
    static std::mutex initGuard;
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3587/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:172:17:
error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3587/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29364/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\executorpool.h(172): error C2039: "mutex": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29364/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4846/ : FAILURE

Compile error at [2020-07-29T17:01:08.650Z] ../kv_engine/engines/ep/src/executorpool.h:172:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4846/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4930/ : FAILURE

Compile error at [2020-07-29T17:01:11.861Z] ../kv_engine/engines/ep/src/executorpool.h:172:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4930/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5030/ : FAILURE

Compile error at [2020-07-29T17:00:17.824Z] ../kv_engine/engines/ep/src/executorpool.h:172:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5030/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12746/ : FAILURE

Compile error at [2020-07-29T17:00:28.918Z] ../kv_engine/engines/ep/src/executorpool.h:172:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12746/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2102/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3959/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
